# Design-Pattern

./: CMakeLists.txt  README.md
AbstractFactory/: CMakeLists.txt  Database.h  Hardware.h  LinuxFactory.cc  LinuxFactory.h  OracleDatabase.cc  OracleDatabase.h  SerialPort.cc  SerialPort.h  SqlDatabase.cc  SqlDatabase.h  SystemFactory.cc  SystemFactory.h  WindowsFactory.h  test.cc
Adaptor/: Adaptee.h  Adapter.h  CMakeLists.txt  Target.h  test.cc
Bridge/: AbstractComputer.h  AbstractSystem.h  CMakeLists.txt  LenovoComputer.cc  LenovoComputer.h  LinuxSystem.cc  LinuxSystem.h  test.cc
Builder/: AbstractApplicationBuilder.h  CMakeLists.txt  Director.cc  Director.h  LinuxApplication.cc  LinuxApplication.h  test.cc
ChainOfResponsibility/: CMakeLists.txt  Handle.h  Request.h  test.cc
Command/: CMakeLists.txt  Command.h  ConcreteCommand.h  ConcreteReceiver1.ccc  ConcreteReceiver1.hc  ConcreteReceiver2.ccc  ConcreteReceiver2.hc  Invode.cc  Invoke.h  Receiver.h  test.cc
Composite/: CMakeLists.txt  Component.h  Composite.cc  Composite.h  Leaf.cc  Leaf.h  test.cc
Decorator/: CMakeLists.txt  Component.h  ConcreteComponent.cc  ConcreteComponent.h  ConcreteDecorator.cc  ConcreteDecorator.h  Decorator.cc  Decorator.h  test.cc
Facade/: CMakeLists.txt  test.cc
Factory/: CMakeLists.txt  Factory.cc
Flyweight/: CMakeLists.txt  ConcreteFlyweight.h  Flyweight.h  FlyweightFactory.h  test.cc
Interpreter/: CMakeLists.txt  Expression.h  Interpreter.h  test.cc
Memento/: CMakeLists.txt  CareTaker.h  Memento.h  Originator.h  test.cc
Observer/: Base.h  CMakeLists.txt  Observer.h  (+4 more)
(+23 files in other folders)
